--- a/QCoDeS-GS210.ipynb
+++ b/QCoDeS-GS210.ipynb
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "28a65797-42db-48c0-af64-026fdc2a1c78",
    "metadata": {},
    "outputs": [],
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 7,
    "id": "84b8f82e-fc5f-438d-a167-3d76cb0e5884",
    "metadata": {},
    "outputs": [],
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 8,
    "id": "0095f683-cf2d-4420-a4b0-a4436d6d5050",
    "metadata": {},
    "outputs": [],
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "870334f9-1b96-4134-b807-54561077a805",
    "metadata": {},
    "outputs": [],
@@ -164,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "c1b7f0d6-f794-4919-994f-55e58af087e5",
    "metadata": {},
    "outputs": [
@@ -174,49 +174,27 @@
        "'CURR'"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "gs.source_mode('CURR')\n",
-    "gs.source_mode()"
+    "gs.source_mode()\n",
+    "gs.current(0)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "258268eb-46c7-427f-bd54-a6d215fc3ede",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'off'"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "gs.current(0)\n",
-    "gs.output('off')\n",
-    "gs.output()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 14,
    "id": "9221f7ea-027d-4a5c-b50d-4dea78b99d8e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "226abdb8c9fd4005a041f114b0551b70",
+       "model_id": "d2881e570b9e4685962329bcbf6bda80",
        "version_major": 2,
        "version_minor": 0
       },
@@ -240,109 +218,18 @@
     "#     icons=['check'] * 3\n",
     ")\n",
     "\n",
+    "def changed(change):\n",
+    "    print(mode_toggle.value)\n",
+    "    gs.source_mode(mode_toggle.value[:4].upper())\n",
+    "    \n",
+    "mode_toggle.observe(changed, 'value')\n",
+    "\n",
     "mode_toggle"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
-   "id": "a407251c-7adf-48c7-a2d7-ecdbea49b7c7",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('Voltage', 'Current')"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mode_toggle.options"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "id": "70f28646-5217-405e-9e3d-32509dd96029",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'VOLT'"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "mode_toggle.value[:4].upper()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 42,
-   "id": "7c206d6c-c671-4c6d-b275-c1463bd9bcea",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def changed(change):\n",
-    "    print(mode_toggle.value)\n",
-    "    gs.source_mode(mode_toggle.value[:4].upper())\n",
-    "    \n",
-    "def on_reset_clicked(b):\n",
-    "    with output:\n",
-    "        gs.reset()\n",
-    "    \n",
-    "mode_toggle.observe(changed, 'value')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 37,
-   "id": "ed5f9220-6a13-4e81-bde8-52173fb86488",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d721f983cf1f4b2881033d71b89bf6f8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(description='Reset!', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2f85759e7fe8476db89fe2972a7993f2",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Output()"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 20,
    "id": "16456fed-2d48-4b49-9193-4a2b3d99ef54",
    "metadata": {},
    "outputs": [
@@ -350,7 +237,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Ramping took 11.7 seconds\n"
+      "Ramping took 1.937 seconds\n"
      ]
     }
    ],
@@ -359,7 +246,7 @@
     "gs.output('on')\n",
     "gs.current(0)\n",
     "t1 = time.time()\n",
-    "gs.ramp_current(0.1, 0.0001, 0.01)\n",
+    "gs.ramp_current(0.0002, 0.00001, 0.1)\n",
     "t2 = time.time()\n",
     "print(\"Ramping took {:.4} seconds\".format(t2-t1))"
    ]
@@ -417,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "dbfe84fe-96b0-46f9-b26e-eee91fc21a0d",
    "metadata": {},
    "outputs": [],
@@ -425,6 +312,14 @@
     "# disconnect from the instrument, it will have to reinitialized again\n",
     "gs.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7631cccf-a541-4142-ada2-6b0b961e34c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
